@@ -6,8 +6,12 @@
 
 <xsl:import href="@DB2HTML@"/>
 
-<xsl:param name="db.chunk.top" select="true()"/>
+<xsl:param name="db.chunk.chunk_top" select="true()"/>
 <xsl:param name="db.chunk.extension" select="''"/>
+<xsl:param name="db.chunk.cover_basename" select="'__yelp_cover'"/>
+<xsl:param name="db.chunk.info_basename"  select="'__yelp_info'"/>
+<xsl:param name="db.chunk.index_basename" select="'__yelp_index'"/>
+<xsl:param name="db.chunk.toc_basename"   select="'__yelp_toc"/>
 
 <xsl:template name="db.chunk">
   <xsl:param name="node" select="."/>
